...
    <item
        android:id="@+id/sync"
        app:showAsAction="never"
        android:title="@string/sync"/>

    <item
        android:id="@+id/activity_action_settings"
        app:showAsAction="never"
        android:title="@string/settings"/>

    <item
        android:id="@+id/refine_search"
        app:showAsAction="never"
...
