...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewFlipper
            android:id="@+id/fragment_books_view_flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar style="@style/LoadingProgressBar" />

            <androidx.recyclerview.widget.RecyclerView
...
